# adventofcode2021

./: Makefile  README.md  adventofcode2021.cabal
challenges/: Day01.hs  Day02.hs  Day03.hs  Day04.hs  Day05.hs  Day06.hs  Day07.hs  Day08.hs  Day09.hs  Day10.hs  Day11.hs  Day12.hs  Day13.hs  Day14.hs  Day15.hs  Day16.hs  Day17.hs  Day18.hs  Day20.hs  Day21.hs  Day22.hs  Day24.py
challenges/day01/: Main.hs
common/: Advent.hs  Utils.hs
tools/: new.sh
