cabal-version:       2.4
name:                adventofcode2021
version:             0.1.0.0
homepage:            https://github.com/githubuser/adventofcode2021#readme
license:             ISC
author:              Author name here
maintainer:          example@example.com
copyright:           2022 Author name here
category:            Web
build-type:          Simple
extra-source-files:  README.md

library
  hs-source-dirs:      common
  default-language:    Haskell2010

  exposed-modules:
    Advent,
    Utils
  
  build-depends:
    base         ^>= 4.15,
    containers   ^>= 0.6,
    filepath,
    parsec,
    word8,
    bytestring,
    cryptohash-md5,
    base16-bytestring,

common day
  build-depends:       adventofcode2021, base
  default-language:    Haskell2010

executable day1
  import:           day
  main-is:          Day01.hs
  hs-source-dirs:   challenges

executable day2
  import:           day
  main-is:          Day02.hs
  hs-source-dirs:   challenges

executable day3
  import:           day
  main-is:          Day03.hs
  hs-source-dirs:   challenges

executable day4
  import:           day
  main-is:          Day04.hs
  hs-source-dirs:   challenges
  build-depends:    split

executable day5
  import:           day
  main-is:          Day05.hs
  hs-source-dirs:   challenges
  build-depends:    parsec, containers

executable day6
  import:           day
  main-is:          Day06.hs
  hs-source-dirs:   challenges
  build-depends:    array, split

executable day7
  import:           day
  main-is:          Day07.hs
  hs-source-dirs:   challenges
  build-depends:    split

executable day8
  import:           day
  main-is:          Day08.hs
  hs-source-dirs:   challenges
  build-depends:    split, containers

executable day9
  import:           day
  main-is:          Day09.hs
  hs-source-dirs:   challenges
  build-depends:    array

executable day10
  import:           day
  main-is:          Day10.hs
  hs-source-dirs:   challenges
  build-depends:    containers

executable day11
  import:           day
  main-is:          Day11.hs
  hs-source-dirs:   challenges
  build-depends:    containers, deepseq, array

executable day12
  import:           day
  main-is:          Day12.hs
  hs-source-dirs:   challenges
  build-depends:    containers, split

executable day13
  import:           day
  main-is:          Day13.hs
  hs-source-dirs:   challenges
  build-depends:    containers, split

executable day14
  import:           day
  main-is:          Day14.hs
  hs-source-dirs:   challenges
  build-depends:    containers, split

executable day15
  import:           day
  main-is:          Day15.hs
  hs-source-dirs:   challenges
  build-depends:    containers

executable day16
  import:           day
  main-is:          Day16.hs
  hs-source-dirs:   challenges
  build-depends:    parsec

executable day17
  import:           day
  main-is:          Day17.hs
  hs-source-dirs:   challenges
  build-depends:    containers

executable day20
  import:           day
  main-is:          Day20.hs
  hs-source-dirs:   challenges
  build-depends:    containers, array, split

executable day21
  import:           day
  main-is:          Day21.hs
  hs-source-dirs:   challenges
  build-depends:    containers, mtl

executable day18
  import:           day
  main-is:          Day18.hs
  hs-source-dirs:   challenges
  build-depends:    containers, parsec

